G1 Full GC flushes mark stats cache too early

XMLWordPrintable

    • gc
    • 10
    • b12

      As the title suggests, G1 Full GC flushes mark stats before reference processing, which may add more liveness information.

      So far I think this only has impact on whether the region is selected for compaction or not; at worst this value will be underestimated and the region needlessly compacted (instead of kept in place).

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: