8325857: G1 Full GC flushes mark stats cache too early

Flush mark stats cache after reference processing because that phase can mark some objects.

Intentionally performed serially because even on not-so-current processors this phase takes < 1ms for up to 256 threads.